<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@color/beige">

    <EditText
        android:id="@+id/signupusername"
        android:layout_width="362dp"
        android:layout_height="78dp"
        android:layout_marginTop="132dp"
        android:hint="@string/enter_email"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterpassword"
        android:layout_width="362dp"
        android:layout_height="78dp"
        android:layout_marginTop="240dp"
        android:hint="@string/enter_password1"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="362dp"
        android:layout_height="78dp"
        android:layout_marginTop="344dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SignUpFinal"
        android:layout_width="165dp"
        android:layout_height="70dp"
        android:layout_gravity="start"
        android:backgroundTint="@color/beige"
        android:textColor="@color/black"
        android:text="@string/action_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword"
        app:layout_constraintVertical_bias="0.297" />

</androidx.constraintlayout.widget.ConstraintLayout>