<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg_2"
    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/username"
        android:layout_width="352dp"
        android:layout_height="70dp"
        android:layout_marginTop="276dp"
        android:background="#30ffffff"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="352dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:background="#30ffffff"
        android:enabled="true"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/login"
        android:layout_width="116dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/white"
        android:enabled="true"
        android:text="@string/action_sign_in"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.066"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="116dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:backgroundTint="@color/white"
        android:text="@string/action_sign_up"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.112" />

</androidx.constraintlayout.widget.ConstraintLayout>


