<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayDetails"
    android:background="@color/cream">

<!--    <Button-->
<!--        android:id="@+id/btnshow"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="@color/darkpurple"-->
<!--        android:text="show" />-->

<!--    <Button-->
<!--        android:id="@+id/btninsert"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="57dp"-->
<!--        android:layout_marginTop="13dp"-->
<!--        android:layout_marginEnd="19dp"-->
<!--        android:layout_marginBottom="60dp"-->
<!--        android:backgroundTint="@color/darkpurple"-->
<!--        android:text="insert"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/btnshow"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/etprice" />-->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="357dp"
        android:layout_height="370dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="18dp"
        android:textSize="30dp"
        android:hint="@string/display_product_details_here"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/add_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="29dp"
        android:backgroundTint="@color/darkpurple"
        android:text="@string/add_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_wishlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734" />

    <Button
        android:id="@+id/add_wishlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="136dp"
        android:backgroundTint="@color/darkpurple"
        android:text="@string/add_to_wishlist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736" />

    <!--    <TextView-->
<!--        android:id="@+id/textView2"-->
<!--        android:layout_width="230dp"-->
<!--        android:layout_height="97dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.557"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.317" />-->

<!--    <EditText-->
<!--        android:id="@+id/etcode"-->
<!--        android:layout_width="157dp"-->
<!--        android:layout_height="45dp"-->
<!--        android:layout_marginStart="42dp"-->
<!--        android:layout_marginTop="1dp"-->
<!--        android:layout_marginEnd="11dp"-->
<!--        android:layout_marginBottom="2dp"-->
<!--        android:ems="10"-->
<!--        android:inputType="textPersonName"-->
<!--        android:text="code"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/etmfg"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/etname"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView2" />-->

<!--    <EditText-->
<!--        android:id="@+id/etname"-->
<!--        android:layout_width="161dp"-->
<!--        android:layout_height="42dp"-->
<!--        android:layout_marginStart="3dp"-->
<!--        android:layout_marginTop="210dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:ems="10"-->
<!--        android:inputType="textPersonName"-->
<!--        android:text="Name"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/etexp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toEndOf="@+id/textView2"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/add_wishlist"-->
<!--        app:layout_constraintVertical_bias="1.0" />-->

<!--    <EditText-->
<!--        android:id="@+id/etmfg"-->
<!--        android:layout_width="160dp"-->
<!--        android:layout_height="44dp"-->
<!--        android:layout_marginStart="42dp"-->
<!--        android:layout_marginTop="2dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_marginBottom="13dp"-->
<!--        android:ems="10"-->
<!--        android:inputType="textPersonName"-->
<!--        android:text="mfg"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/etprice"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/etexp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/etcode" />-->

<!--    <EditText-->
<!--        android:id="@+id/etexp"-->
<!--        android:layout_width="159dp"-->
<!--        android:layout_height="44dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="3dp"-->
<!--        android:layout_marginEnd="42dp"-->
<!--        android:layout_marginBottom="13dp"-->
<!--        android:ems="10"-->
<!--        android:inputType="textPersonName"-->
<!--        android:text="exp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/etprice"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/etmfg"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/etcode" />-->

<!--    <EditText-->
<!--        android:id="@+id/etprice"-->
<!--        android:layout_width="163dp"-->
<!--        android:layout_height="44dp"-->
<!--        android:layout_marginStart="124dp"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:layout_marginEnd="124dp"-->
<!--        android:layout_marginBottom="19dp"-->
<!--        android:ems="10"-->
<!--        android:inputType="textPersonName"-->
<!--        android:text="price"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/btnshow"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/etmfg" />-->

</androidx.constraintlayout.widget.ConstraintLayout>